--- a/ic-agent/Cargo.toml
+++ b/ic-agent/Cargo.toml
@@ -25,10 +25,9 @@ mime = "0.3.16"
 num-bigint = "0.2.6"
 # openssl = "0.10.24"
 rand = "0.7.2"
-# reqwest = { version = "0.10.4", default-features = false, features = [ "blocking", "json"] }
-reqwest = { version = "0.10.4",default-features = false, features = [ "blocking", "json", "rustls-tls" ] }
-# rustls = "0.18.0"
-# ring = { version = "0.16.11", features = ["std"] }
+reqwest = { version = "0.10.4", default-features = false, features = [ "blocking", "json", "rustls-tls" ] }
+rustls = "0.18.0"
+ring = { version = "0.16.11", features = ["std"] }
 serde = { version = "1.0.101", features = ["derive"] }
 sha2 = "0.9.2"
 serde_bytes = "0.11.2"
@@ -36,7 +35,7 @@ serde_cbor = "0.11.1"
 simple_asn1 = "0.4.1"
 thiserror = "1.0.20"
 url = "2.1.0"
-# webpki-roots = "0.20.0"
+webpki-roots = "0.20.0"
 
 [dependencies.pem]
 version = "0.8.1"
