--- a/ic-agent/Cargo.toml
+++ b/ic-agent/Cargo.toml
@@ -23,7 +23,7 @@ http = "0.2.3"
 ic-types = { path = "../ic-types", version = "0.1", features = [ "serde" ] }
 leb128 = "0.2.4"
 mime = "0.3.16"
-openssl = "0.10.32"
+openssl = { version = "0.10.32", features = ["vendored"] }
 rand = "0.7.2"
 rustls = "0.19.0"
 ring = { version = "0.16.11", features = ["std"] }
